--- a/src/main/resources/templates/mainscreen.html
+++ b/src/main/resources/templates/mainscreen.html
@@ -11,12 +11,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>My Bicycle Shop</title>
+    <title>My Automotive Shop</title>
 </head>
 <body>
 
 <div class="container">
-    <h1>Shop</h1>
+    <h1>Automotive Parts & Products Shop</h1>
     <hr>
     <h2>Parts</h2>
     <form th:action="@{/mainscreen}">
@@ -35,7 +35,10 @@
             <th>Name</th>
             <th>Price</th>
             <th>Inventory</th>
+            <th>Max</th>
+            <th>Min</th>
             <th>Action</th>
+
         </tr>
         </thead>
         <tbody>
@@ -43,10 +46,13 @@
             <td th:text="${tempPart.name}">1</td>
             <td th:text="${tempPart.price}">1</td>
             <td th:text="${tempPart.inv}">1</td>
+            <td th:text="${tempPart.max}">1</td>
+            <td th:text="${tempPart.min}">1</td>
             <td><a th:href="@{/showPartFormForUpdate(partID=${tempPart.id})}" class="btn btn-primary btn-sm mb-3">Update</a>
                 <a th:href="@{/deletepart(partID=${tempPart.id})}" class="btn btn-primary btn-sm mb-3"
                    onclick="if(!(confirm('Are you sure you want to delete this part?')))return false">Delete</a>
             </td>
+
         </tr>
         </tbody>
     </table>
@@ -82,10 +88,17 @@
             <td><a th:href="@{/showProductFormForUpdate(productID=${tempProduct.id})}" class="btn btn-primary btn-sm mb-3">Update</a>
                 <a th:href="@{/deleteproduct(productID=${tempProduct.id})}" class="btn btn-primary btn-sm mb-3"
                    onclick="if(!(confirm('Are you sure you want to delete this product?')))return false">Delete</a>
+                <a th:href="@{/buyProduct(productID=${tempProduct.id})}" class="btn btn-primary btn-sm mb-3">Buy Now</a>
             </td>
+
         </tr>
         </tbody>
     </table>
+    <br><br>
+    <form action = "about">
+        <p><button>About Us</button></p>
+    </form>
 </div>
+
 </body>
 </html>
