--- a/src/main/resources/templates/productForm.html
+++ b/src/main/resources/templates/productForm.html
@@ -37,6 +37,8 @@
         <th>Name</th>
         <th>Price</th>
         <th>Inventory</th>
+        <th>Max</th>
+        <th>Min</th>
         <th>Action</th>
     </tr>
     </thead>
@@ -45,6 +47,8 @@
         <td th:text="${tempPart.name}">1</td>
         <td th:text="${tempPart.price}">1</td>
         <td th:text="${tempPart.inv}">1</td>
+        <td th:text="${tempPart.max}">1</td>
+        <td th:text="${tempPart.min}">1</td>
         <td><a th:href="@{/associatepart(partID=${tempPart.id})}" class="btn btn-primary btn-sm mb-3">Add</a>
         </td>
     </tr>
@@ -57,6 +61,8 @@
             <th>Name</th>
             <th>Price</th>
             <th>Inventory</th>
+            <th>Max</th>
+            <th>Min</th>
             <th>Action</th>
         </tr>
         </thead>
@@ -65,6 +71,8 @@
             <td th:text="${tempPart.name}">1</td>
             <td th:text="${tempPart.price}">1</td>
             <td th:text="${tempPart.inv}">1</td>
+            <td th:text="${tempPart.max}">1</td>
+            <td th:text="${tempPart.min}">1</td>
             <td><a th:href="@{/removepart(partID=${tempPart.id})}"  class="btn btn-primary btn-sm mb-3">Remove</a>
             </td>
         </tr>
